--- a/public/profile.html
+++ b/public/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>データ送信テスト</title>
+    <title>プロフィール確認</title>
     <style>
         :root {
             --primary-color: #4a90e2;
@@ -64,7 +64,7 @@
 <body>
 
     <div class="container">
-        <h2>送信テスト</h2>
+        <h2>プロフィール確認</h2>
         
         <div class="form-group">
             <label>User ID</label>
