Update placeholder text for groupId input field

--- a/public/threads.html
+++ b/public/threads.html
@@ -116,7 +116,7 @@
 
     <div class="form-group">
         <label>ターゲット サークルID</label>
-        <input type="text" id="groupId" placeholder="例: 100****0">
+        <input type="text" id="groupId" placeholder=" XXXXXx">
     </div>
 
     <div class="form-group">
