--- a/public/home.html
+++ b/public/home.html
@@ -108,6 +108,10 @@
                 <span class="icon">✉️</span>
                 <span class="label">レター</span>
             </a>
+            <a href="/profile" class="nav-card">
+                 <span class="icon">🗣️</span>
+                <span class="label">profile</span>
+            </a> 
         </div>
     </div>
 
