Update navigation links in home.html

--- a/v2/home.html
+++ b/v2/home.html
@@ -184,13 +184,13 @@
         <h1>Yay Toolkit </h1>
         
         <div class="nav-grid">
-            <a href="/v2/threads" class="nav-card">
+            <a href="/threads" class="nav-card">
                 <span class="icon">💬</span>
                 <span class="label">Circle Threads</span>
                 <div style="font-size:0.7rem; color:#666; margin-top:5px;">AUTO POSTER</div>
             </a>
 
-            <a href="/v2/review" class="nav-card">
+            <a href="/review" class="nav-card">
                 <span class="icon">✉️</span>
                 <span class="label">Letter Sender</span>
                 <div style="font-size:0.7rem; color:#666; margin-top:5px;">DM / REVIEW</div>
